<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.MainActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:backgroundTint="@color/colorAccent"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal" />

            <com.shobhitpuri.custombuttons.GoogleSignInButton
                android:id ="@+id/google_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity ="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/google_button_text"
                android:textSize ="16sp"
                android:textColor= "@color/colorPrimaryDark"
                android:layout_marginBottom="40dp"
                app:isDarkTheme="false" />

            <TextView android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:text="@string/or"
                android:textSize="16sp"
                android:textColor="@color/white"
                />


            <!-- Email Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/colorPrimaryDark">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/white"
                    android:hint="@string/email_user_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/colorPrimaryDark">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/white"
                    android:hint="@string/password_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="24dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:padding="12dp"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:gravity="center_horizontal"
                    android:text="@string/no_acct_question"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"
                    />

                <TextView
                    android:id="@+id/create_acct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center_horizontal"
                    android:textColorLink="@color/blue"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:selectAllOnFocus="false"
                    android:linksClickable="false"
                    android:autoLink="all"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/create_acct"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    />
            </LinearLayout>
        </LinearLayout>
        <!--
        <com.google.android.gms.common.SignInButton
            android:layout_gravity="center"
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
            -->
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>