<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/white"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:minHeight="125dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:layout_weight="2"
                android:orientation="vertical">
                <!--  Username Label -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/colorPrimaryDark"
                    >

                    <EditText
                        android:id="@+id/sign_up_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_name"
                        android:inputType="textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--  Username Label -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/colorPrimaryDark"
                    >

                    <com.mchat.recinos.CustomViews.EditTextBackEvent
                        android:id="@+id/sign_up_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_username"
                        android:inputType="textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/sign_up_image"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/default_avatar">

            </ImageView>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/email_wrappper"
            >
            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/sign_up_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/password_wrappper"
            >
            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/confirm_password_wrappper"
            >
            <EditText
                android:id="@+id/sign_up_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/sign_up_confirm_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/sign_up_button"/>


    </LinearLayout>
</ScrollView>