<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:orientation="vertical"
        android:id= "@+id/material_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/new_msg_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:orientation="vertical"
            app:titleTextColor="@color/white"
            android:theme="@style/ToolbarTheme"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ProgressBar
            android:id="@+id/new_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminate="true"
            android:max="100"
            android:indeterminateOnly="true"
            android:backgroundTint="@color/white"
            android:indeterminateTint="@color/colorAccent"
            android:visibility="gone"
            android:maxHeight="2dp"
            android:layout_marginTop="1dp"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:minHeight="90dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/new_progressbar">
            <ImageView
                android:id="@+id/new_msg_img"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:minWidth="90dp"
                android:contentDescription="@string/send_msg_desc"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/to_text"
                app:layout_constraintTop_toTopOf="parent"
                android:background ="@drawable/round_btn" />

            <TextView
                android:id="@+id/to_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:text="@string/to"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/new_msg_img"
                app:layout_constraintTop_toTopOf="parent" />

            <com.mchat.recinos.CustomViews.EditTextBackEvent
                android:id="@+id/new_msg_username"
                android:autofillHints="@string/sign_up_username"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/sign_up_username"
                android:minHeight="40dp"
                android:paddingStart="5dp"
                android:paddingEnd="40dp"
                android:textSize="18sp"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/to_text"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/new_msg_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:background="@null"
                android:ems="10"
                android:hint="@string/msg_hint"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textMultiLine|textAutoComplete|textEmailAddress|text"
                android:maxLength="2000"
                android:maxLines="5"
                android:scrollHorizontally="false"
                android:text=""
                tools:targetApi="o" />

            <!-- content description is for accessibility. TO be read by assistant to blind people-->
            <ImageButton
                android:id="@+id/new_msg_send"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/send_msg_desc"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_send_black_24dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>