<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.mchat.recinos.Activities.ChatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/chat_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.AppBarOverlay">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <!--
                <ImageView
                    android:id="@+id/chat_contact_image"
                    android:contentDescription="@string/send_msg_desc"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="center"
                    app:layout_constraintStart_toStartOf="parent"
                    style="?android:attr/borderlessButtonStyle"

                    />
                   -->
                <TextView
                    android:id="@+id/chat_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ListView
        android:id="@+id/message_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:divider="#ffff"
        android:stackFromBottom="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/send_image"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/send_img_desc"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_image_black_24dp" />
        <ImageButton
            android:id="@+id/take_photo"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/send_img_desc"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_camera_alt_black_24dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="50"
            android:background="@null"
            android:ems="10"
            android:hint="@string/msg_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textMultiLine|textAutoComplete|text"
            android:maxLength="750"
            android:maxLines="4"
            android:scrollHorizontally="false"
            android:text=""
            tools:targetApi="o" />

        <!-- content description is for accessibility. To be read by assistant to blind people-->
        <ImageButton
            android:id="@+id/send_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="5"
            android:adjustViewBounds="true"
            android:contentDescription="@string/send_msg_desc"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_send_black_24dp" />
    </LinearLayout>
</LinearLayout>